[project]
name = "App"
version = "0.1.0"
authors = [
    {name  = "Vanny", email = "msvankaspr@gmail.com"}
]
description = "..."
readme = "README.md"
dynamic = ["dependencies", "requires-python"]

[tool.poetry]
package-mode = false

[virtualenvs]
in-project = true
path= ".venv"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
fastapi = {extras = ["standart"], version = "^0.121.0"}
uvicorn = "^0.38.0"
black = "^25.9.0"
pydantic-settings = "^2.11.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}
asyncpg = "^0.30.0"
alembic = {extras = ["asyncio"], version = "^1.17.0"}
bcrypt = "^5.0.0"
pydantic = {extras = ["email"], version = "^2.12.3"}
pyjwt = "^2.10.1"
aiosmtplib = "^5.0.0"
jinja2 = "^3.1.6"
aiohttp = "^3.13.1"
async-lru = "^2.0.5"
